--- a/styles/style.css
+++ b/styles/style.css
@@ -3,21 +3,31 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    height: 100vh;
+}
+
 header{
-    width: 100vw;
-    height: 10vh;
+    width: 100%;
+    height: 10%;
     background-color: aqua;
 }
 main{
-    width: 100vw;
-    height: 90vh;
+    width: 100%;
+    height: 90%;
     display: flex;
 }
 nav{
-    width: 15.55vw;
-    height: 90vh;
+    width: 16%;
+    height:auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 4vh;
+    gap: 4vh;
 }
 iframe{
-    width: 84.45vw;
-    height: 90vh;
+    width: 84%;
+    height:auto;
 }
